# QQ-agent

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.gpu.yaml  compose.yaml  entrypoint.sh
.github/workflows/: build.yml
app/: Dockerfile  requirements.txt
app/src/: __init__.py  agent.py  config.py  embedding.py  llm.py  main.py  mcp_tools.py  memory_store.py  schemas.py
app/static/: index.html
deploy/quadlet/: README.md  app.env.example  mneme.container  mneme.env.example  qq-agent-app.container  qq-agent-qqbot.container  qq-agent.container  qq-agent.env.example  qq-agent.network  qqbot.env.example
qqbot/: Dockerfile  ai_client.go  botgo_logger.go  botgo_logger_test.go  config.go  dedupe.go  event_mode_test.go  go.mod  go.sum  handlers.go  main.go  processor.go  processor_test.go
scripts/: start.ps1  start.sh
src/: agent.rs  api.rs  cli.rs  config.rs  embedding.rs  fetch.rs  image.rs  llm.rs  main.rs  mcp.rs  qq.rs  shutdown.rs  store.rs
static/: index.html
tests/: test_embedding_smoke.py  test_embedding_units.py  test_memory_store.py  test_pure_functions.py
